# Game-of-Life

./: README.md
Coursework 1/: CMakeLists.txt  COMP 1921 - Reflection.docx  book_management.c  book_management.h  interface_management.c  interface_management.h  library  library.txt  library_management.h  loan_management.c  loan_management.h  loans.txt  main.c  user_management.c  user_management.h  usersbase.txt
Coursework 2/: CMakeLists.txt  Game_SDL.c  Game_SDL.h  Game_interface.c  Game_interface.h  Game_logic.c  Game_logic.h  Game_main.h  Planning Report - CW2.docx  README-Instructions.txt  loadstate.txt  main.c  protoGame.c  saved_state.txt  savestate.txt  test_Logic.c  teststate.txt
Coursework 2/docs/: Coursework 2-Reflection.docx  Planning Report - CW2.docx  README-Instructions.txt  README.md
